--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="bg-info-subtle">
     <div class="col align-items-center vh-100 d-flex justify-content-center">
         <div class="card mx-auto rounded-4" style="width: 25rem;">
-            <img src="Happy girl wearing headphones.jpg" class="card-img-top mb-0 rounded-4" alt="...">
+            <img src="img.jpg" class="card-img-top mb-0 rounded-4" alt="...">
             <div class="card-body text-center my-0 py-0">
                 <h5 class="card-title display-5 mt-0">Order Summary</h5>
                 <p class="card-text px-3">You can now listen to millions of songs, audiobooks, and podcasts on any
